--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,5 +12,11 @@ h1 {
 }
 
 a {
-    text-decoration:none;
+    text-decoration: none;
+}
+
+a.link {
+    color:#dcd9d5;
+    text-decoration: underline;
+    font-weight:600;
 }
