--- a/client/src/pages/contact.module.css
+++ b/client/src/pages/contact.module.css
@@ -17,3 +17,14 @@
 .contact p {
 	line-height:35px;
 }
+
+@media only screen and (max-width:500px) {
+
+    .contact h1 {
+        font-size:30px;
+    }
+
+    .contact a {
+        font-size:18px;
+    }
+}
